# NC201712

./: NC201712.cabal  nc.mm  notes.txt
Learn/morte/: DPair.mt  DPair2.mt  List.mt  Pair.mt  Pair2.mt  foo.mt  id.mt  id2.mt  inner_outer.mt
idris_rough_design/: Genesis.idr
src/: Main.hs  WhiteBoard.hs
src/Network/: .#Kademlia.hs
src/Network/Kademlia/: Networking.hs
src/NomicCoin/: Core.hs  Types.hs
src/WhiteBoard/: BasicActions.hs  Core.hs  Demo.hs  Learn.hs  Monitor.hs  Types.hs
