name:                NC201712
version:             1.1.0.0
homepage:            https://github.com/redfish64/NC201712
bug-reports:         https://github.com/redfish64/NC201712/issues
synopsis:            A sort of coin network thingy
description:
            .
            A p2p network that supports multiple block chains and uses
            a mltt tfpl to communicate
            .
            This is a rough draft version and probably has bugs that
            will allow you to prove you own an infinite number of
            blockchain coins
            .

license:             BSD3
license-file:        LICENSE
author:              Tim Engler <engler@gmail.com>
author:              Tim Engler <engler@gmail.com>
category:            Network

build-type:          Simple
cabal-version:       >=1.10

source-repository head
    type:       git
    location:   https://github.com/froozen/kademlia.git

executable NC201712
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5,
                       network >=2.6 && <2.7,
                       mtl >=2.1.3.1,
                       bytestring >=0.10.2 && <0.11,
                       transformers >=0.3,
                       containers >=0.5.5.1,
                       stm >=2.4.3,
                       transformers-compat >=0.3.3

  hs-source-dirs:      src
  default-language:    Haskell2010

-- test-suite library-test
--   type:                exitcode-stdio-1.0
--   main-is:             Test.hs
--   hs-source-dirs:      test, src
--   other-modules:       Protocol, Networking, TestTypes, Types, Tree, Instance,
--                        ReplyQueue, Implementation,
--                        Network.Kademlia.Networking, Network.Kademlia.Types,
--                        Network.Kademlia.Protocol, Network.Kademlia.Instance,
--                        Network.Kademlia.Protocol.Parsing, Network.Kademlia.Tree,
--                        Network.Kademlia.ReplyQueue,
--                        Network.Kademlia.Implementation

--   default-language:    Haskell2010
--   build-depends:       base >= 4.7 && < 5,
--                        network >=2.6 && <2.7,
--                        mtl >=2.1.3.1,
--                        bytestring >=0.10.2 && <0.11,
--                        transformers >=0.3,
--                        containers >=0.5.5.1,
--                        stm >=2.4.3,
--                        transformers-compat >=0.3.3,
--                        tasty >= 0.10.1,
--                        tasty-quickcheck >= 0.8.3.1,
--                        QuickCheck >= 2.4,
--                        tasty-hunit >= 0.9.0.1,
--                        HUnit >= 1.2.5.2
